--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,18 +1,22 @@
 name: Build
+
 on:
   push:
     branches:
-      - main
+      - '**'               # Triggers on push to all branches
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
